# GameDaddy

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.github/ISSUE_TEMPLATE/: gamedaddy-feature-template.md
.github/workflows/: convention-check.yml
.zed/: tasks.json
gameboy-hardware/cpu/: cpu.cpp  cpu.h
gameboy-hardware/io/instructions/: instructions.h
gameboy-hardware/mbc/: mbc.h
gameboy-hardware/memory/: memory.cpp  memory.h
gameboy-hardware/rom/: rom-validation.cpp  rom-validation.h
include/: units.h
platform-layer/: gui.cpp  platform.cpp  platform.h
platform-layer/display/: display_interface.h
platform-layer/display/impl/: cli.h  sdl_gui.cpp  sdl_gui.h
scripts/: build.sh  debug.sh
src/: main.cpp
src/_platform/: platform.cpp  platform.h
src/_platform/display/impl/: sdl_gui.cpp  sdl_gui.h
src/cartridge/: cart.cpp  cart.h
src/cartridge/mbc/: mbc.cpp  mbc.h
src/cartridge/rom/: rom-validation.cpp  rom-validation.h
src/gameboy/cpu/: cpu.cpp  cpu.h
src/gameboy/interrupts/: interrupts.h
src/gameboy/io/instructions/: instructions.cpp
src/gameboy/io/joypad/: joypad.h
src/gameboy/io/ppu/: ppu.h
src/gameboy/io/sound/: sound.h
src/gameboy/memory/: memory.cpp
src/scripts/: run.sh
